dev/non_executable_reasons_record_from_random_10k/3404.txt
3.5
An error occurred while executing the following cell:
------------------
# Atenção com a sintaxe
if 4 > 3
  print("Tudo funciona!")
------------------

[0;36m  File [0;32m"<ipython-input-9-20e8653bc258>"[0;36m, line [0;32m2[0m
[0;31m    if 4 > 3[0m
[0m            ^[0m
[0;31mSyntaxError[0m[0;31m:[0m invalid syntax

SyntaxError: invalid syntax (<ipython-input-9-20e8653bc258>, line 2)

Executability                            : False
